--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lang-storage-backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Daniil Smakhtsin <dansmht16@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -22,19 +22,34 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/typeorm": "^7.1.5",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "connect-redis": "^5.2.0",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/passport-google-oauth20": "^2.0.7",
+    "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
