--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Environment
+.env
+.env.development
+.env.production
